--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
 * {box-sizing:border-box;}
 body {
-    background-color: white;
+    background-image: url("tree_bark.png");
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: lighter;
 }
 
 a {
     font-weight: 400;
+}
+
+.form-container {
+    background-color: white;
 }
 
 .bgimg {
@@ -25,16 +29,17 @@ a {
 }
 
 .wikipedia-container {
-    float:right;
-    width:290px;
-    padding:10px;
+    float: right;
+    width: 50%;
+    padding: 10px;
     margin-right: 10px;
     background-color: rgba(255,255,255,0.7);
 }
 
 .nytimes-container {
     padding: 10px;
-    margin-right:300px;
+    width: 50%;
+    margin-right:30px;
     background-color: rgba(255,255,255,0.7);
 }
 
