--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,17 @@ a {
 .wikipedia-container {
     float: right;
     width: 50%;
-    padding: 10px;
+    padding: 20px;
     margin-right: 10px;
     background-color: rgba(255,255,255,0.7);
 }
 
+#wikipedia-links {
+    padding-left: 0;
+}
+
 .nytimes-container {
-    padding: 10px;
+    padding: 20px;
     width: 50%;
     margin-right:30px;
     background-color: rgba(255,255,255,0.7);
