--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     background-image: url("tree_bark.png");
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: lighter;
+    padding: 0;
 }
 
 a {
@@ -11,6 +12,7 @@ a {
 
 .form-container {
     background-color: white;
+    height: 5vh;
 }
 
 .bgimg {
@@ -54,12 +56,19 @@ a {
 
 .article {
     list-style-type: none;
-    padding:10px;
+    padding: 10px;
     border-top: 1px solid #CCC;
 }
+
 .article:first-child {
     border-top:none;
 }
+
 h2 {
     font-family: 'IM Fell English', serif;
+}
+
+label {
+    padding-left: 10px;
+    vertical-align: 50%;
 }
