--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     background-image: url("tree_bark.png");
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: lighter;
-    padding: 0;
+    margin: 0;
 }
 
 a {
@@ -34,7 +34,7 @@ a {
     float: right;
     width: 50%;
     padding: 20px;
-    margin-right: 10px;
+    margin-right: 0;
     background-color: rgba(255,255,255,0.7);
 }
 
@@ -72,4 +72,12 @@ h2 {
 label {
     padding-left: 10px;
     vertical-align: 50%;
+}
+
+input {
+    vertical-align: 50%;
+}
+
+hr {
+    margin: 0;
 }
