--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,7 @@ h2 {
 
 label {
     padding-left: 10px;
-    vertical-align: 50%;
-}
-
-input {
-    vertical-align: 50%;
+    padding-top: 10px;
 }
 
 hr {
