--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,8 @@ h2 {
 }
 
 .form-content {
-    padding-left: 1%;
-    padding-top: 1%;
+    padding-top: 10px;
+    padding-left: 10px;
 }
 
 hr {
