--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-* {box-sizing:border-box;}
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-image: url("tree_bark.png");
     font-family: 'Helvetica Neue', sans-serif;
@@ -35,6 +38,7 @@ a {
     float: right;
     width: 50%;
     padding: 20px;
+    padding-bottom: 4px;
     margin-right: 0;
     background-color: rgba(255,255,255,0.7);
 }
