--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,8 @@ hr {
 
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: -38px;
     z-index: 3;
-    max-width: 200px;
     padding-left: 15px;
     padding-bottom: 0;
     font-weight: lighter;
@@ -136,5 +135,9 @@ footer {
         padding-left: 0;
         text-align: center;
         max-width: 100%;
+    }
+    
+    .google-icon {
+        width: 38px;
     }
 }
